tests/enum/bad/empty.catala_en
## Test

```catala
declaration enumeration Foo:

declaration scope Bar:
  internal foo content Foo
```

```catala-test-cli
$ catala Typecheck 
┌─[ERROR]─
│
│  No cases defined for enumeration Foo. Please define at least one.
│
├─➤ tests/enum/bad/empty.catala_en:4.25-28:
│   │
│ 4 │ declaration enumeration Foo:
│   │                         ‾‾‾
└─ Test
#return code 123#
```
